@@ -7,6 +7,7 @@
 * Commented out the use of clearenv() as it is not on all platforms and not wanted 
 * Look for Acct-Session-ID in addition to User-Name in Disconnect-Request - if given, only that specific session is disconnected (thanks to Jeremy Childs for patch)
 * Added option ''uamlogoutip'' (default 1.1.1.1) whereby any HTTP request to this address will result in the auto-logout of the associated session
+* Support for CoARequest RADIUS requests to reconfigure session parameters (session-timeout, data/bandwidth limits, etc)
 	
 == ChangeLog (Coova Chilli v1.0.2 svn revision 17) ==
 
